# nutrition-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RUN_LOCAL.md  Taskfile.yml  compose.yml  continuity.md  go.mod  go.sum  roadmap.md
.github/workflows/: bridge.yml  main.yml  pr.yml  release.yml
apps/companion/: README.md  dart-defines.json  pubspec.yaml
apps/garmin-bridge/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/garmin-bridge/garmin_bridge/: __init__.py  __main__.py  app.py  backend.py  config.py  garmin_client.py  logging_setup.py  mapping.py  sync.py  workout_builder.py
apps/garmin-bridge/tests/: conftest.py  test_backfill.py  test_config.py  test_garmin_client.py  test_logging.py  test_login.py  test_mapping.py  test_sync.py  test_workout_builder.py
apps/garmin-bridge/tests/fixtures/: garmin_day.json
cmd/kazper/: integration_test.go  main.go  mcp.go  migrate.go  serve.go  version.go
cmd/nutrition-api/: integration_test.go  main.go  mcp.go  migrate.go  serve.go  version.go
docs/: docs.go  swagger.json  swagger.yaml
extensions/cookidoo/: README.md  content_script.js  manifest.json  options.html  options.js  popup.html  popup.js
internal/achievements/: handlers.go  handlers_test.go  repo.go
internal/agenttools/: coach.go  idempotency.go  idempotency_test.go  pending.go  pending_test.go  registry.go  registry_coachcontext.go  registry_coachcontext_test.go  registry_dailycontext.go  registry_dailycontext_test.go  registry_dailysummary.go  registry_energy.go  (+46 more)
openspec/: priorities.md
(+894 files in other folders)
